# 1leg_test

./: README.md
leg1_project_controller/: CMakeLists.txt  package.xml
leg1_project_controller/config/: leg1_project_control.yaml
leg1_project_controller/launch/: leg1_project_control.launch
leg1_project_description/: CMakeLists.txt  package.xml
leg1_project_description/include/leg1_project/: IK_Solver.hpp
leg1_project_description/launch/: display.launch  gazebo.launch
leg1_project_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
leg1_project_description/rviz/: urdf.rviz
leg1_project_description/src/: dynamixel_operator.cpp  robot_node.cpp  trajectory.cpp
leg1_project_description/urdf/: leg1_project.csv  leg1_project.gazebo.xacro  leg1_project.transmission.xacro  leg1_project.urdf.xacro  leg1_project_robot.urdf.xacro
leg1_project_gazebo/: CMakeLists.txt  package.xml
leg1_project_gazebo/launch/: leg1_project_gazebo.launch
leg1_project_libs/: CMakeLists.txt  package.xml
leg1_project_libs/include/: robot_node.hpp
leg1_project_libs/include/leg1_project_libs/: robot_node.hpp
leg1_project_libs/src/: Kinematics.cpp  robot_node.cpp
